controller + swagger + test
