# back/src/openapi/routes/index.ts
@@ -3,5 +3,6 @@ import './auth/register'
 import './auth/me'
 import './categories'
 import './resources/user'
+import './resources/vote'
 import './topics/category'
 import './topics/topics'
