# back/src/routes/resourcesRouter.ts
@@ -1,7 +1,7 @@
 import Router from '@koa/router'
 import { z } from 'zod'
 import { authMiddleware, validate } from '../middleware'
-import { createResource, getResourcesByUserId } from '../controllers'
+import { createResource, getResourcesByUserId, putResourceVote } from '../controllers'
 import { resourceCreateSchema } from '../schemas'
 import { pathRoot } from './routes'
 
@@ -20,6 +20,16 @@ resourcesRouter.get(
   '/me',
   authMiddleware,
   getResourcesByUserId
+)
+
+resourcesRouter.put(
+  '/vote/:resourceId/:vote',
+  authMiddleware,
+  validate(z.object({params: z.object({
+    resourceId: z.string().cuid(),
+    vote: z.coerce.number().int().min(-1).max(1)
+  })})),
+  putResourceVote
 )
 
 export { resourcesRouter }
